Fix version info box margin behind Table of Content for >=1792px width
Summary: Closes T16560

Test Plan: In Phriction, go to a page with numerous unpublished (?) versions and a longer table of contents, with a viewport of more than >=1792px width.

Reviewers: O1 Blessed Committers, valerio.bozzolan

Reviewed By: O1 Blessed Committers, valerio.bozzolan

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T16560

Differential Revision: https://we.phorge.it/D26854

--- a/webroot/rsrc/css/phui/phui-document-pro.css
+++ b/webroot/rsrc/css/phui/phui-document-pro.css
@@ -396,4 +396,8 @@ span.visual-only.phui-icon-view.phui-font-fa.fa-users {
   span.visual-only.phui-icon-view.phui-font-fa {
     text-indent: 0px;
   }
+
+  div.phui-document-view-pro .phui-info-view {
+    margin-left: 300px;
+  }
 }
